[metadata]
name = chh_swpt_calibration
description = swaption calibration based on Chen et al.(2019)
author = Xiaocheng LIANG
platforms = win32
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = 
    chh_swpt_calibration
python_requires = >=3.9
install_requires = 
    numpy >= 1.23.0
    scipy >= 1.9.0
package_dir =
    =src
zip_safe = no